# pytest-openfiles

./: .gitignore  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  appveyor.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_workflows.yml  publish.yml
pytest_openfiles/: __init__.py  plugin.py
src/pytest_openfiles/: plugin.py
tests/: test_open_file_detection.py
