[metadata]
name = pytest-openfiles
version = 0.4.0.dev0
url = https://astropy.org
author = The Astropy Developers
author_email = astropy.team@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Testing
    Topic :: Utilities
license = BSD
description = Pytest plugin for detecting inadvertent open file handles
long_description = file: README.rst
keywords = detect, open, file, handle, psutil, pytest, py.test

[options]
zip_safe = False
packages = find:
python_requires = >=2.7
install_requires =
    pytest>=2.8.0
    psutil

[options.entry_points]
pytest11 =
    pytest_openfiles = pytest_openfiles.plugin

[tool:pytest]
minversion = 2.8
testpaths = tests
